tests/typing/bad/testfile-mutable-3.scala

class A(x: Int) { def m() { x = 2 } }
object Main { def main(args: Array[String]) { } }
